# internal/models/http/personalities/http_model.go
@@ -1,14 +1,16 @@
 package personalities
 
-type RoleType string
-
-const (
-	Student RoleType = "student"
-	Teacher RoleType = "teacher"
-	Admin   RoleType = "administration"
-)
+import "github.com/max-main-team/backend_hackaton_MAX/internal/models/repository/personalities"
 
 type RequestAccessToUniversity struct {
-	UniversityID int64    `json:"university_id"`
-	UserType     RoleType `json:"role"`
+	UniversityID int64                  `json:"university_id"`
+	UserType     personalities.RoleType `json:"role"`
+}
+
+type AccessRequestResponse struct {
+	Data []struct {
+		UserID   int64                  `json:"user_id"`
+		UserType personalities.RoleType `json:"role"`
+	} `json:"data"`
+	HasMore bool `json:"has_more"`
 }
